Added constraints
