# internal/transport/http/question/dto.go
@@ -2,14 +2,14 @@ package question
 
 type CreateQuestionDTO struct {
 	Title    string                 `json:"title"`
-	Type     string                 `json:"type"`
+	Type     string                 `json:"type" enums:"SINGLE,TEXT,NUMBER,MULTIPLE" example:"SINGLE"`
 	Variants map[string]interface{} `json:"variants"`
 	Answer   map[string]interface{} `json:"answer"`
 }
 
 type UpdateQuestionDTO struct {
 	Title    string                 `json:"title"`
-	Type     string                 `json:"type"`
+	Type     string                 `json:"type" enums:"SINGLE,TEXT,NUMBER,MULTIPLE" example:"SINGLE"`
 	Variants map[string]interface{} `json:"variants"`
 	Answer   map[string]interface{} `json:"answer"`
 }
